# waffle

./: meson.build
examples/: gl_basic.m  meson.build
include/: meson.build
include/waffle/: meson.build
man/: meson.build
src/utils/: meson.build  wflinfo.c  wflinfo.m
src/waffle/: meson.build
tests/functional/: meson.build
